syntax = "proto3";

option go_package = "github.com/milossimic/grpc_rest/proto/helloworld";

package helloworld;

import "google/api/annotations.proto";

service Greeter {

  rpc PostRequest (CreatePostRequest) returns (Post) {
    option (google.api.http) = {
      post: "/post"
      body: "post"
    };
  }

   rpc GetRequest (GetPostRequest) returns (Post){
      option (google.api.http) = {
        get: "/post/{post}"
      };
   }

   rpc GetAllRequest (EmptyRequest) returns (GetAllPosts){
      option (google.api.http) = {
        get: "/post"
      };
   }

   rpc DeleteRequest (DeletePostRequest) returns (Post){
      option (google.api.http) = {
        delete: "/post/{post}"
      };
   }
}

// The request message containing the user's name
message Post {
  string id = 1;
  string title = 2;
  string text = 3;
  repeated string tags = 4;
  //string name = 1;
}

message GetAllPosts {
  repeated Post posts = 1;
}

message CreatePostRequest {
   Post post = 1;
}

message GetPostRequest {
  // The ID of the shelf resource to retrieve.
  string post = 1;
}

message EmptyRequest{}

message DeletePostRequest {
  // The ID of the shelf to delete.
  string post = 1;
}